--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    scroll-behavior: smooth;
+  }
+
+  html, body {
+    overflow-x: hidden;
+    position: relative;
+    height: 100%;
+  }
+
+  body {
+    overscroll-behavior-y: none;
+    scroll-padding: 1rem;
+  }
+}
